sites/xyflow.com/src/app/global.css
@import 'tailwindcss';
@layer base;
@import '@xyflow/react/dist/style.css' layer(base);

@import 'xy-shared/styles/globals.css';
@import 'nextra-theme-docs/style.css';

/* TODO: this does not seem to make a difference */
@source '../../../../packages/xy-shared/';

/* Site-specific theme extensions */
/* TODO: what is this */
@theme {
  --background-image-gradient: url('/img/bg-gradient.png');
}

/* xyflow.com uses black as primary */
@layer base {
  :root {
    --primary: 0 0% 0%;
    --accent: var(--color-react);
    --secondary-foreground: 0 0% 0%;
  }

  .dark {
    --primary: 0 0% 100%;
  }

  .fallback {
    --primary: var(--color-react);
  }
}

